# meridian

./: .claudeignore  .env.example  .gitignore  .mcp.json  .releaserc.json  .releaserc.staging.json  .taurignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OBSERVABILITY.md  README.md  SECURITY.md  SETUP.md  SKILL.md  TESTING.md  VISION.md  bootstrap.sh  build.rs  dev-start.sh  install-dev.sh  install.sh  package-lock.json  package.json  release-please-config.json  rust-toolchain.toml  skills-lock.json
meridian-core/: Cargo.toml
meridian-core/src/: active.rs  canonical_task.rs  capture.rs  coding_agents.rs  db.rs  hygiene.rs  integrations.rs  intervals.rs  lib.rs  notifications.rs  settings.rs  tasks.rs  today.rs  today_types.rs  triage.rs  week.rs  worklogs.rs
meridian-core/src/adapters/: asana.rs  azure_devops.rs  github.rs  jira.rs  linear.rs  mod.rs  trello.rs
meridian-core/src/readers/: coding_agents.rs  current_task.rs  hour_status.rs  hour_text.rs  integrations.rs  mod.rs  notices.rs  plan.rs  proposed.rs  task_detail.rs  tasks.rs  triage.rs  week.rs  worklogs.rs
meridian-core/src/util/: date.rs  hygiene.rs  intervals.rs  mod.rs
meridian-core/tests/: readers.rs  today_smoke.rs
meridian-oauth/: Cargo.toml
meridian-oauth/src/: flow.rs  jira.rs  lib.rs  store.rs  trello.rs
services/: .env.example  .gitignore  README.md  ax_sidecar.py  pyproject.toml  pyrightconfig.json  requirements-mlx.txt  requirements.txt  start-activity-agent.sh
services/.deepeval/: .deepeval_telemetry.txt
services/agents/: README.md  __init__.py  _hermes_setup.py  _parser.py  _prompts.py  _state.py  _system_context.py  activity_reporter.py  agent_tiebreaker.py  agno_viewer.py  backfill_tasks.py  bootstrap.py  config.py  db.py  embeddings.py  jira_keeper.py  jira_mcp.py  jira_updater.py  jira_updater_daemon.py  llm_selector.py  mlx_classifier.py  model_registry.py  observability.py  orchestrator.py  reranker.py  run_jira_updater.py  run_task_linker.py  run_task_linker_mlx.py  schemas.py  semantic_matcher.py  server.py  session_distiller.py  stage2.py  stage3.py  structured.py  synthesizer.py  tagger.py  tagger_daemon.py  task_classifier_agent.py  taxonomy.py  (+3 more)
services/agents/db/: __init__.py  agent_runs.py  connections.py  context.py  dispatch.py  jira_updates.py  sessions.py
services/agents/pm_update/: __init__.py  agents.py  cli.py  config.py  db.py  hooks.py  inspect.py  jira_poster.py  learning.py  models.py  schema.sql  tools.py  workflow.py
services/agents/pm_worklog_update/: __init__.py  agents.py  cli.py  config.py  db.py  hooks.py  inspect.py  jira_poster.py  jira_worklog_daemon.py  learning.py  models.py  schema.sql  tools.py  workflow.py
services/agents/prompts/: activity_report.py  coding_agent_session_summary.py
services/agents/routes/: __init__.py  activity.py  chat.py  classify.py  distill.py  generate.py  health.py  inference.py  pipeline.py  prefetch.py  rerank.py  summarise.py  worklog.py
services/agents/rules/: __init__.py  activity.py  collaboration.py  engagement.py  intent.py  practice.py  ticket.py  tool.py  topic.py
services/agents/tests/: __init__.py  conftest.py  test_agent_tiebreaker.py  test_classifier.py  test_classify_helpers.py  test_coding_agent_indexer_jsonl_meta.py  test_config.py  test_generate_helpers.py  test_jira_updater.py  test_llm_selector.py  test_mlx_classifier.py  test_parser.py  test_rules.py  test_run_task_linker.py  test_run_task_linker_mlx.py  test_schemas.py  test_semantic_matcher.py  test_smoke_e2e.py  test_stage2.py  test_stage3.py  test_task_classifier_agent.py  test_text_for_embedding.py  test_worklog_models.py
services/agents/worklog_pipeline/: __init__.py  agent_io.py  classifier.py  db.py  generation.py  match.py  models.py  pipeline.py  workflow.py  worklog.py
services/coding_agent_indexer/: __init__.py  cli.py  config.py  daemon.py  db.py  hook.py  host_app.py  jsonl_meta.py  register.py
services/coding_agent_indexer/tests/: test_segmentation.py
services/coding_agent_summariser/: __init__.py  claude_runner.py  cli.py  codex_runner.py  config.py  daemon.py  db.py  mlx_fallback.py  prompts.py  summariser.py
services/coding_agent_summariser/tests/: test_summariser.py
services/hermes-config/: .env.template  config.yaml
services/meridian-agents/: README.md  pyproject.toml
services/meridian-agents/reference/: README.md
services/meridian-agents/tests/: conftest.py  test_config.py  test_db.py  test_llm.py
services/observability/dashboards/: activity-summary.json  classifier-debug.json  coding-agent-summariser.json  pm-worklog-debug.json  pm-worklog-hour.json  session-distiller-debug.json  session-distiller.json  worklog-pipeline-debug.json
services/scripts/: com.meridiona.ax-sidecar.plist  com.meridiona.coding-agent-indexer.plist  com.meridiona.jira-updater.plist  com.meridiona.mlx-server.plist  com.meridiona.pm-worklog-daemon.plist  com.meridiona.tagger-daemon.plist  count_classifier_tokens.py  install-ax-sidecar.sh  install-claude-hook.sh  install-coding-agent-indexer.sh  install-jira-updater-daemon.sh  install-mlx-server-daemon.sh  install-pm-worklog-daemon.sh  install-tagger-daemon.sh  run_tests.sh  setup-hermes.sh  uninstall-ax-sidecar.sh  uninstall-claude-hook.sh  uninstall-coding-agent-indexer.sh  uninstall-jira-updater-daemon.sh  uninstall-mlx-server-daemon.sh  uninstall-pm-worklog-daemon.sh  uninstall-tagger-daemon.sh
services/tests/: conftest.py  test_continuity_context.py  test_fetch_pm_tasks.py  test_format_candidates.py  test_llm_selector.py  test_prompt_cache_equivalence.py  test_task_linker.py
services/tests/evals/: .dataset.json  .loop_decisions.md  README.md  _inprocess_accuracy.py  build_dataset.py  build_goldens_from_labels.py  build_real_goldens.py  classify_session.py  compare_pipeline.py  conftest.py  eval_agent.py  eval_classifier.py  eval_week_classify.py  metrics.py  render_seeds.py  smoke_run.py  strategies.py  test_classifier.py  test_mlx_classifier.py  (+2 more)
tray/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.staging.conf.json
(+809 files in other folders)
