[package]
name = "meridian"
version = "1.21.0"
edition = "2021"
description = "Meridian — normalises screenpipe activity into structured app sessions"
authors = ["Meridiona"]
repository = "https://github.com/meridiona/meridian"
license = "MIT"
keywords = ["screenpipe", "productivity", "activity-tracking"]

[lib]
name = "meridian"
path = "src/lib.rs"

[[bin]]
name = "meridian"
path = "src/main.rs"

[[bin]]
name = "cat_smoke"
path = "src/bin/cat_smoke.rs"

[[bin]]
name = "backfill_task_classification"
path = "src/bin/backfill_task_classification.rs"

[dependencies]
# DB — exact versions matching screenpipe
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate", "json"] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
sqlite-vec = "0.1.3"

# Async
tokio = { version = "1.15", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4.31", features = ["serde"] }

# Logging + observability
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono", "json", "registry"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.27", features = ["experimental_metadata_attributes"] }
opentelemetry-semantic-conventions = "0.27"

# Error handling
anyhow = "1.0.86"

# HTTP client for PM provider APIs (Jira, GitHub, Linear)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Misc
once_cell = "1.19"
dotenvy = "0.15"
shellexpand = "3"

[dev-dependencies]
tokio       = { version = "1.15", features = ["full", "test-util"] }
tempfile    = "3"
serial_test = "3"
