[workspace]
members = [".", "meridian-core", "meridian-oauth", "tray/src-tauri"]
resolver = "2"

[package]
name = "meridian"
version = "1.65.0"
edition = "2021"
description = "Meridian — ambient developer-efficiency tool that keeps Jira, GitHub, and Linear in sync"
authors = ["Meridiona"]
repository = "https://github.com/meridiona/meridian"
license = "MIT"
keywords = ["developer-tools", "productivity", "activity-tracking", "jira", "screenpipe"]

[lib]
name = "meridian"
path = "src/lib.rs"

[[bin]]
name = "meridian"
path = "src/main.rs"

[[bin]]
name = "cat_smoke"
path = "src/bin/cat_smoke.rs"

[dependencies]
# DB — exact versions matching screenpipe
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate", "json"] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
sqlite-vec = "0.1.3"

# Shared lean data layer (DB row types + read queries) — also depended on by the
# Tauri dashboard, so the queries live in ONE place (single source of truth).
meridian-core = { path = "meridian-core" }

# Shared OAuth/token engine (Jira/Trello browser login + token store + refresh).
# Also depended on by the Tauri tray so login runs in-process — single source of
# truth for the flow, specs, and token store. The daemon re-exports it under
# `crate::intelligence::oauth`.
meridian-oauth = { path = "meridian-oauth" }

# Async
tokio = { version = "1.15", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4.31", features = ["serde"] }

# Logging + observability
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono", "json", "registry"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.27", features = ["experimental_metadata_attributes"] }
opentelemetry-semantic-conventions = "0.27"

# Error handling
anyhow = "1.0.86"

# HTTP client for PM provider APIs (Jira, GitHub, Linear)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Misc
once_cell = "1.19"
dotenvy = "0.15"
shellexpand = "3"

# Telemetry spool: tar+gz for export/import CLI
tar = "0.4"
flate2 = "1"

# HttpClient trait for SpoolClient
opentelemetry-http = "0.27"
async-trait = "0.1"
bytes = "1"
http = "1.1"

# Telemetry import needs a tempdir at runtime (not just in tests)
tempfile = "3"

# OAuth (PKCE) — browser-based auth for PM providers (Jira, Linear)
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tokio       = { version = "1.15", features = ["full", "test-util"] }
tempfile    = "3"
serial_test = "3"
