[package]
name = "meridian-core"
version = "0.1.0"
edition = "2021"
description = "Lean shared data layer (DB types + read queries) for the Meridian daemon and dashboard"

[dependencies]
# Deliberately minimal — only what the shared read layer needs. NO daemon deps
# (no screenpipe, MLX, trackers, OTel), so the Tauri app can depend on this
# without pulling the whole daemon tree.
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
