# ambient dev tool that watches what you do and updates your PM tickets automatically, boosting developer productivity
[package]
name = "meridian-oauth"
version = "0.1.0"
edition = "2021"
description = "Meridian — shared OAuth/token engine for PM providers (Jira, Trello), used by BOTH the daemon and the Tauri tray so login can run in-process."

[lib]
name = "meridian_oauth"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# PKCE: SHA-256 challenge + random verifier/state.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
# Token-endpoint + cloud-id discovery HTTP. rustls to match the rest of the
# workspace (no native-tls).
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Loopback redirect server (TcpListener + async read/write), consent timeout, and
# the refresh serialization mutex. Only the features the engine actually uses, so
# the tray stays lean; the daemon's `full` unifies over this.
tokio = { version = "1.15", features = ["net", "io-util", "time", "sync"] }
tracing = "0.1.40"
