[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-agents"
version = "0.1.0"
description = "Meridian tagger pipeline — 3-stage session classifier for meridian.db"
requires-python = ">=3.11"
authors = [{ name = "Meridiona" }]
license = { text = "MIT" }
dependencies = [
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.4.30",
  "sentence-transformers>=2.0.0,<4",
  "opentelemetry-api>=1.0.0",
  "opentelemetry-sdk>=1.0.0",
  "opentelemetry-exporter-otlp-proto-http>=1.0.0",
  "opentelemetry-instrumentation-logging>=0.48b0",
  "python-dotenv>=1.0.0,<2",
  "openai>=1.40.0",
  "mcp>=0.9.0",
  "PyYAML>=6.0,<7",
  "python-json-logger>=2.0,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "agents.*"]

[tool.pytest.ini_options]
testpaths = ["agents/tests"]
markers = [
    "integration: marks tests requiring external services",
]
addopts = "-m 'not integration'"
