[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-agents"
version = "0.1.0"
description = "Meridian agents — hermes task linking and Jira progress updates for meridian.db"
requires-python = ">=3.11"
authors = [{ name = "Meridiona" }]
license = { text = "MIT" }
dependencies = [
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.4.30",
  "opentelemetry-api>=1.27,<2",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
  "opentelemetry-instrumentation-logging>=0.48b0",
  "python-dotenv>=1.0.0,<2",
  "openai>=2.0.0,<3",
  "mcp>=1.3.0,<2",
  "PyYAML>=6.0,<7",
  "python-json-logger>=2.0,<3",
  "psutil>=5.9,<7",
]

[project.optional-dependencies]
# Apple Silicon local inference — install with: pip install -e ".[local-llm]"
local-llm = ["mlx-lm>=0.22,<1", "psutil>=5.9,<7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "agents.*"]

[tool.pytest.ini_options]
testpaths = ["agents/tests"]
markers = [
    "integration: marks tests requiring external services",
]
addopts = "-m 'not integration'"
