[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-agents"
version = "1.67.0"
description = "Meridian agents — MLX classifier server and Jira worklog synthesis for meridian.db"
requires-python = ">=3.11"
authors = [{ name = "Meridiona" }]
license = { text = "MIT" }
dependencies = [
  # Commented for now: slow git clone, and the MLX backend + coding-agent
  # indexer/summariser don't use hermes (only the legacy --backend hermes does).
  # "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.4.30",
  "opentelemetry-api>=1.27,<2",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
  "opentelemetry-instrumentation-logging>=0.48b0",
  "python-dotenv>=1.0.0,<2",
  "openai>=2.0.0,<3",
  "mcp>=1.3.0,<2",
  "PyYAML>=6.0,<7",
  "python-json-logger>=2.0,<3",
  "psutil>=5.9,<7",
]

[project.optional-dependencies]
# Apple Silicon MLX inference server — install with: pip install -e ".[mlx]"
# Installs the model runtime (mlx-lm + outlines) and the FastAPI server
# (fastapi + uvicorn) that the Rust daemon calls via POST /classify_sessions.
# Requires arm64 macOS; outlines 1.x is incompatible with Python 3.14+.
mlx = [
    "mlx-lm>=0.31,<1",
    # MLX-native sentence embeddings for the session distiller's SemDeDup stage.
    # Deliberately NOT sentence-transformers/torch — keeps the runtime lean
    # (no ~2.5 GB torch) and on the single MLX backend. See agents.model_registry
    # (embedder role) and agents.session_distiller.
    "mlx-embeddings>=0.0.5,<1",
    # Accelerator for HF "Xet"-backed repos (the mlx-community models use Xet, not
    # legacy LFS — hf_transfer is deprecated/ignored on huggingface_hub 1.x and does
    # NOT handle Xet). Pinned >=1.5.1: 1.5.0 ships a broken native import that hangs
    # Xet downloads. Tuned harder with HF_XET_HIGH_PERFORMANCE=1 (MLX server plist).
    "hf-xet>=1.5.1,<2",
    "outlines[mlxlm]>=1.3,<2",
    "pydantic>=2.10,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

# Agno-based PM worklog update workflow — install with: pip install -e ".[pm_worklog_update]"
# Pulls in agno (Workflow/Agent/LearningMachine/Skills). No RAG: the synth has the
# session bundle + tools, no vector DB.
pm_worklog_update = [
    "agno>=2.6,<3",
    "pydantic>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
]

[project.scripts]
meridian-server = "agents.server:main"

[tool.uv]
# Lock all extras so `uv lock` produces a complete, reproducible uv.lock.
# At install time both extras are synced — `uv sync --extra mlx --extra
# pm_worklog_update` — because the one MLX server serves /classify_sessions
# (mlx) AND /synthesise_worklog (agno, pm_worklog_update).
constraint-dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "agents.*"]

[tool.pytest.ini_options]
testpaths = ["agents/tests"]
markers = [
    "integration: marks tests requiring external services",
    "slow: marks tests that load the MLX model (requires Apple Silicon)",
]
# Default: skip integration + slow tests (no external services needed for CI).
# Override with --override-ini="addopts=" when running evals manually.
addopts = "-m 'not integration and not slow'"
