# meridian — normalises screenpipe activity into structured app sessions

[project]
name = "meridian-agents"
version = "0.1.0"
description = "LLM-driven session-to-ticket correlator and dispatcher for meridian"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Meridiona" }]

dependencies = [
    # LLM client (OpenAI-compatible; works with Cloud Ollama, Anthropic-via-proxy, etc.)
    "openai>=1.50.0",
    # Async HTTP for sinks (Jira / GitHub / Linear write-back)
    "httpx>=0.27.0",
    # Retry/backoff for LLM and sink calls
    "tenacity>=8.5.0",
    # JSON repair / structured-output parsing aids used by AIAgent
    "pydantic>=2.7.0",
    # .env loading at startup (mirrors the Rust daemon's dotenvy behavior)
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
meridian-agents = "meridian_agents.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
