# meridian — normalises screenpipe activity into structured app sessions

[project]
name = "meridian-agents"
version = "0.1.0"
description = "LLM-driven session-to-ticket correlator and dispatcher for meridian"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Meridiona" }]

dependencies = [
    # LLM client (OpenAI-compatible; works with Cloud Ollama, Anthropic-via-proxy, etc.)
    "openai>=1.50.0",
    # Async HTTP for sinks (Jira / GitHub / Linear write-back)
    "httpx>=0.27.0",
    # Retry/backoff for LLM and sink calls
    "tenacity>=8.5.0",
    # JSON repair / structured-output parsing aids used by AIAgent
    "pydantic>=2.7.0",
    # .env loading at startup (mirrors the Rust daemon's dotenvy behavior)
    "python-dotenv>=1.0.1",
    # Async SQLite client; coexists with the Rust daemon's WAL-mode connection
    "aiosqlite>=0.20.0",
    # Hermes agent runtime — full power, vendored in-repo at vendor/hermes/
    # so the code is visible, modifiable, and pinned without a git fetch at
    # install time. uv installs from the local path via [tool.uv.sources]
    # below. Provides `from run_agent import AIAgent`, the full tool
    # catalogue (terminal, browser, environments), and provider plumbing.
    "hermes-agent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
meridian-agents = "meridian_agents.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_agents"]

[tool.uv.sources]
# Install hermes-agent from the in-repo vendor/hermes/ directory rather
# than from PyPI or git. The hermes source is committed; uv builds the
# wheel locally on `uv sync`.
hermes-agent = { path = "vendor/hermes", editable = false }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    # Source material from hermes upstream — kept for reference, not on the
    # import path. Don't lint upstream style we don't control.
    "reference",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
