[package]
name = "meridian-tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "meridian_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "meridian-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["clock"] }
# Lean shared data layer (DB row types + read queries) — NOT the full daemon.
meridian-core = { path = "../../meridian-core" }
# Instrumentation facade for tray commands (no-op without a subscriber).
tracing = "0.1"
# Dev-only: the `otel` feature pulls the full daemon lib JUST to reuse its
# OpenObserve OTLP export (observability::init) — zero duplication. OFF by
# default so release builds stay lean (no OTel in the shipped tray).
meridian = { path = "../..", optional = true }

[features]
otel = ["dep:meridian"]
