[package]
name = "meridian-tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "meridian_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "meridian-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `process` is needed by parents.rs (spawns `meridian ticket-parents`); without
# it a standalone tray build (no otel → no daemon to unify the feature) fails.
tokio = { version = "1", features = ["time", "rt-multi-thread", "process", "macros", "io-util", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
# SHA-256 verification of the downloaded runtime tarball against the manifest.
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
# Lean shared data layer (DB row types + read queries) — NOT the full daemon.
meridian-core = { path = "../../meridian-core" }
# Instrumentation facade for tray commands (no-op without a subscriber).
tracing = "0.1"
# Dev-only: the `otel` feature pulls the full daemon lib JUST to reuse its
# OpenObserve OTLP export (observability::init) — zero duplication. OFF by
# default so release builds stay lean (no OTel in the shipped tray).
meridian = { path = "../..", optional = true }
# Forked screenpipe @ last-MIT 892199f74 (Meridiona/screenpipe-fork). In-process
# screen capture + Apple Vision OCR. Optional → only pulled by the `capture`
# feature (heavy: ScreenCaptureKit/cidre/sck-rs). Private repo: local builds use
# the user's git credentials; CI needs a deploy token (future).
screenpipe-screen = { git = "https://github.com/Meridiona/screenpipe-fork", rev = "d6d2b318cfe1fffbc9e923e627e8659df1b2ff7e", optional = true }
# Sibling crate in the same fork: the accessibility-tree walker (slice 3b).
# `tree::create_tree_walker` walks the focused window's AX tree → structured
# text — the PRIMARY signal for Electron/Chromium apps (VS Code, Slack), which
# expose nothing to OCR-free a11y until the walker sets AXManualAccessibility
# itself. Optional → only the `capture` feature pulls it.
screenpipe-a11y = { git = "https://github.com/Meridiona/screenpipe-fork", rev = "d6d2b318cfe1fffbc9e923e627e8659df1b2ff7e", optional = true }
# CoreFoundation/Apple-frameworks bindings. Used ONLY for the in-process
# Accessibility-trust prompt (`ax::is_process_trusted_with_prompt`) — the AX
# analogue of `CGRequestScreenCaptureAccess`. Pinned to the same 0.13 line
# screenpipe-a11y uses so Cargo unifies to one cidre build. Optional → capture only.
cidre = { version = "0.13", features = ["ax"], optional = true }
# Console log subscriber for capture-enabled non-otel runs (otel installs its
# own). Makes the `capture: …` logs visible during a `cargo run --features capture`.
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
otel = ["dep:meridian"]
# In-process screen capture (Gap-2 Bucket 2). OFF by default — pulls the heavy
# forked screenpipe-screen stack (ScreenCaptureKit/cidre) only when building the
# capture-enabled app. Slice 1 ships the engine-agnostic boundary; slice 2 adds
# the screenpipe-screen engine.
capture = [
    "dep:screenpipe-screen",
    "dep:screenpipe-a11y",
    "dep:cidre",
    "dep:tracing-subscriber",
]
